fixed whitespace under footer - needed padding-bottom

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -114,11 +114,11 @@
 
 .icons {
     color: white;
-    margin-top: 20px;
+    margin-top: 30px;
 }
 
 .footer {
-   width: 100%;
+    padding-bottom: 15px;
 }
 
 .footer-background {
